fix(header):#MEN-850 fix header size on iphone

--- a/scss/moodle/header.scss
+++ b/scss/moodle/header.scss
@@ -55,7 +55,6 @@
 
     @media(max-width: $size-mobile) {
       height: inherit;
-      height: -webkit-fill-available;
       padding-right: 5px;
       padding-left: 0;
     }
